# sf16a18-sdk-4.2.10

./: README.md  sf16a18_p10h_fullmask_gmac.config
chaos_calmer_15_05_1/: .gitignore  make.sh  make_all.sh
chaos_calmer_15_05_1/config/: Config-build.in  Config-devel.in  Config-images.in
chaos_calmer_15_05_1/dl/: hostapd-2015-03-25.tar.bz2  luasql-2.3.0.tar.xz  mt76-2016-03-03-310d420178c86e253a172413da30ecf479b64251.tar.xz  odhcp6c-2015-07-29.tar.bz2  odhcpd-2015-11-19.tar.bz2  relayd-2015-03-13.tar.bz2  sox-14.4.1.tar.bz2
chaos_calmer_15_05_1/feeds/luci.tmp/: .packageinfo
chaos_calmer_15_05_1/feeds/packages.tmp/: .packageinfo
chaos_calmer_15_05_1/feeds/routing.tmp/: .packageinfo
chaos_calmer_15_05_1/include/: image.mk  kernel-build.mk  kernel-defaults.mk  siwifi_version.mk  target.mk  toplevel.mk  version.mk
chaos_calmer_15_05_1/package/base-files/: Makefile
chaos_calmer_15_05_1/package/system/rpcd/src/: CMakeLists.txt  cJSON.c  file.c  iwinfo.c  lepton.c  p2p.cpp  p2papi.c  siwifi_p2p.c
chaos_calmer_15_05_1/package/system/rpcd/src/include/: cJSON.h  local_http.h  p2p.h  p2papi.h  slsdk.h  ssst_request.h  token.h
chaos_calmer_15_05_1/package/system/rpcd/src/include/rpcd/: plugin.h
chaos_calmer_15_05_1/scripts/: metadata.pl
chaos_calmer_15_05_1/toolchain/gcc/: common.mk
image_maker/: README  sf-makeimage.sh
linux-3.18.29-dev/: .gitignore  Makefile
linux-3.18.29-dev/host/include/: gmp.h
linux-3.18.29-dev/linux-3.18.29/: Makefile
uboot/: Makefile  make.sh  sf_make.sh
uboot/bare_spl/: Makefile  main.c  sf1688.elf  sf1688_dasm  sf1688_map  sf1688_mpw0.ld
uboot/cmd/: Kconfig  Makefile  btn_httpd.c  holdreset.c
uboot/common/: bootm.c
uboot/configs/: sf19a28_fullmask_fpga_defconfig  sfa18_fullmask_86v_defconfig  sfa18_fullmask_86v_pcba_defconfig  sfa18_fullmask_ac20_realtek_defconfig  sfa18_fullmask_ac_defconfig  sfa18_fullmask_ac_pcba_defconfig  sfa18_fullmask_air001_defconfig  sfa18_fullmask_air001_pcba_defconfig  sfa18_fullmask_p10b_defconfig  sfa18_fullmask_p10h_defconfig  sfa18_fullmask_p10h_pcba_defconfig  sfa18_fullmask_p10m_defconfig  sfa18_fullmask_p10m_pcba_defconfig  sfa18_fullmask_p20b_defconfig  sfa18_fullmask_p20b_pcba_defconfig  sfa18_fullmask_rep_defconfig  sfa18_fullmask_rep_pcba_defconfig  sfa18_fullmask_x10_defconfig  sfa18_fullmask_x10_pcba_defconfig
uboot/httpd/: fsdata.c  httpd.c
uboot/include/: spi-nand.h
uboot/net/: arp.c  httpd.c  net.c
uboot/sfax8/: p20.img  u-boot-spl.img  u-boot.img
(+1112 files in other folders)
